@@ -1,3 +1,6 @@
+2009-03-16 - Sean Huber (shuber@huberry.com)
+  * Add Struct class
+
 2009-03-15 - Sean Huber (shuber@huberry.com)
   * Add A#chunk, A#first, and A#last
   * Add Enumerable#to_native_a
